--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
   - "2.7"
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y exuberant-ctags
 #install:
 #  - pip install -r requirements.txt
 script:
