--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ python:
   - "2.7"
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y exuberant-ctags
-#install:
-#  - pip install -r requirements.txt
+  - sudo apt-get install -y exuberant-ctags libsvn-dev
+install:
+  - chmod +x install_requirements.sh
+  - ./install_requirements.sh
 script:
   - export RESULTS_BASE_DIR=dst
   - chmod +x run-unittests.sh
